@@ -39,6 +39,8 @@ Available Bots Now:
  	search
 	google
 
+ ==== Developers Guide ====
+ - Please read HACKING.
 
  ==== LICENSE ====
  - All documents and codes are licensed under GNU GPL
