@@ -66,7 +66,7 @@ sub init {
         system "mkdir -p $JOB_PATH/routine";
 }
 
-
+SplashBox::show_pathinfo();
 init();
 
 
